tidos/tests/view_macro/panics/wrong_closing_tag.stderr
error: unexpected closing tag `</p>`, expected `</div>`
 --> tests/view_macro/panics/wrong_closing_tag.rs:7:3
  |
7 |         </p>
  |         ^
